# ummc-patient-enquiry-chatbot-backend

./: Dockerfile  README.md  docker-compose.yaml  kafka-topics.sh  pyproject.toml  rag_poc.ipynb  util.py
app/: .env  config.py  crud.py  database.py  main.py
app/bootstrap/: kafkaInit.py
app/eventhandler/: deleteFileEventHandler.py  evaluationEventHandler.py  feedbackAnalysisEventHandler.py  kafkaConfig.py  uploadedFileEventHandler.py
app/eventhandler/evaluation/: __init__.py  customMistral7B.py  customOllamaLLM.py  evaluationEventHandler.py
app/model/: __init__.py  chatModels.py  feedbackModels.py  pineconeModel.py
app/pinecone/: __init__.py
app/routes/: chatRoutes.py  convertUrlRoute.py  evaluationRoute.py  feedbackRoutes.py  uploadFileRoute.py
app/sentimentanalysis/: init.py
tests/: chatRoutesTest.py  convertUrlRouteTest.py  evaluationRouteTest.py  feedbackRouteTest.py  uploadFileRouteTest.py
