[tool.poetry]
name = "chatbot-service"
version = "0.1.0"
description = ""
authors = ["TANZHIJIAN14 <jiantanzhi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.6"}
fastcrud = "^0.15.1"
pymongo = "^4.10.1"
confluent-kafka = "^2.6.1"
pypdf2 = "^3.0.1"
pinecone = "^5.4.1"
pinecone-plugin-assistant = "^0.4.1"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
